# setlist-fm-client

./: .tool-versions  LICENSE  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml
.github/workflows/: fmt.yml  publish.yml  test.yml
docs/: api.md  async_api.md  index.md  release_notes.md
setlist_fm_client/: __init__.py  api.py  async_api.py  core.py  enums.py  models.py
tests/: test_api.py  test_core.py
tests/cassettes/: TestGetArtist.test[Accept.json0].yaml  TestGetArtist.test[Accept.json1].yaml  TestGetArtist.test_async[Accept.json0].yaml  TestGetArtist.test_async[Accept.json1].yaml  TestGetArtist.test_async_serialize.yaml  TestGetArtist.test_serialize.yaml  TestGetArtistSetlists.test[Accept.json0].yaml  TestGetArtistSetlists.test[Accept.json1].yaml  TestGetArtistSetlists.test_async[Accept.json0].yaml  TestGetArtistSetlists.test_async[Accept.json1].yaml  TestGetArtistSetlists.test_async_serialize.yaml  TestGetArtistSetlists.test_serialize.yaml  TestGetCity.test[Accept.json0].yaml  TestGetCity.test[Accept.json1].yaml  TestGetCity.test_async[Accept.json0].yaml  TestGetCity.test_async[Accept.json1].yaml  TestGetCity.test_async_serialize.yaml  TestGetCity.test_serialize.yaml  TestGetSetlist.test[Accept.json0].yaml  TestGetSetlist.test[Accept.json1].yaml  TestGetSetlist.test_async[Accept.json0].yaml  TestGetSetlist.test_async[Accept.json1].yaml  TestGetSetlist.test_async_serialize.yaml  TestGetSetlist.test_serialize.yaml  TestGetSetlistByVersion.test[Accept.json0].yaml  TestGetSetlistByVersion.test[Accept.json1].yaml  TestGetSetlistByVersion.test_async[Accept.json0].yaml  TestGetSetlistByVersion.test_async[Accept.json1].yaml  TestGetSetlistByVersion.test_async_serialize.yaml  TestGetSetlistByVersion.test_serialize.yaml  TestGetSetlistOfConcertsAttendedByUser.test[Accept.json0].yaml  TestGetSetlistOfConcertsAttendedByUser.test[Accept.json1].yaml  TestGetSetlistOfConcertsAttendedByUser.test_async[Accept.json0].yaml  TestGetSetlistOfConcertsAttendedByUser.test_async[Accept.json1].yaml  TestGetSetlistOfConcertsAttendedByUser.test_async_serialize.yaml  TestGetSetlistOfConcertsAttendedByUser.test_serialize.yaml  TestGetSetlistOfConcertsEditeddByUser.test[Accept.json0].yaml  TestGetSetlistOfConcertsEditeddByUser.test[Accept.json1].yaml  (+52 more)
